--- a/publication/reconvictions-blog/index.html
+++ b/publication/reconvictions-blog/index.html
@@ -397,7 +397,7 @@
 
 
   
-  <span><a href="/authors/ben-matthews/">Ben Matthews</a></span>, <span><a href="/authors/josiah-king/">Josiah King</a></span>
+  <span><a href="/authors/ben-matthews/">Ben Matthews</a></span>, <span><a href="/authors/josiah-p.j.-king/">Josiah P.J. King</a></span>
 
   </div>
   
