--- a/publication/thesis-metadata/index.html
+++ b/publication/thesis-metadata/index.html
@@ -608,7 +608,7 @@ I set up the word counting using crontab to execute a bash script every day whic
 
     <div class="media-body">
       <h5 class="card-title"><a href="/">Josiah King</a></h5>
-      <h6 class="card-subtitle">Senior Teaching Coordinate in Statistics</h6>
+      <h6 class="card-subtitle">Senior Teaching Coordinator in Statistics</h6>
       
       <ul class="network-icon" aria-hidden="true">
   
