--- a/talk/index.html
+++ b/talk/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Senior Teaching Coordinate in Statistics">
+  <meta name="description" content="Senior Teaching Coordinator in Statistics">
 
   
   <link rel="alternate" hreflang="en-us" href="/talk/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Josiah King">
   <meta property="og:url" content="/talk/">
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Josiah King">
-  <meta property="og:description" content="Senior Teaching Coordinate in Statistics"><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="Senior Teaching Coordinator in Statistics"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
