--- a/template_learn/template_learndash.html
+++ b/template_learn/template_learndash.html
@@ -31,12 +31,13 @@
         <p><i class="far fa-comment" style="font-size: 25px;"></i><br>Discussion Forum</p>
     </a>
     <a class="Assessment">
-        <p><i class="fas fa-pencil-alt" style="font-size: 25px;"></i><br>Assessment and Quizzes</p>
+        <p><i class="fas fa-pencil-alt" style="font-size: 25px;"></i><br>Assessment/Report</p>
+    </a>
+    <a class="Quizzes">
+        <p><i class="fas fa-clipboard-check" style="font-size: 25px;"></i><br>Quizzes</p>
     </a>
     <a class="Timetabling">
         <p><i class="far fa-clock" style="font-size: 25px;"></i><br>Timetabling</p>
     </a>
-    <a class="DRPS">
-        <p><i class="fas fa-clipboard-check" style="font-size: 25px;"></i><br>DRPS</p>
-    </a>
+
 </div>
