--- a/template_learn/template_learndash_local.html
+++ b/template_learn/template_learndash_local.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//template_learn.css"/>
+<link rel="stylesheet" href="template_learn.css"/>
 <link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//fontawesome-all.min.css"/>
 <div class="grid-container">
     <div class="Contacts">
