--- a/template_learn/template_learndashweek.html
+++ b/template_learn/template_learndashweek.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="template_learn.css"/>
+<link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//template_learn.css"/>
 <link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//fontawesome-all.min.css"/>
 <div class="grid-container">
     <div class="Contacts">
@@ -15,14 +15,8 @@
                 <p>Name Surname<br>Email</p>
             </div>
     </div>
-    <a class="Lectures" href="https://uoepsy.github.io/dapr1/lectures/" target="_blank">
-        <span><i class="fas fa-chalkboard-teacher" style="font-size: 25px;"></i><br>Lecture Slides</span>
-    </a>
-    <a class="Lecture-recordings">
-        <span><i class="fas fa-microphone" style="font-size: 25px;"></i><br>Lecture recordings</span>
-    </a>
-    <a class="Labs" href="https://uoepsy.github.io/dapr1/labs/" target="_blank">
-        <span><i class="fas fa-laptop" style="font-size: 25px;"></i><br>Labs</span>
+    <a class="Weekly" href="https://www.learn.ed.ac.uk/webapps/blackboard/content/listContentEditable.jsp?content_id=_4661838_1&course_id=_77718_1&mode=reset" target="_blank">
+        <span><i class="fas fa-chalkboard-teacher" style="font-size: 25px;"></i><br>Weekly Materials</span>
     </a>
     <a class="Announcements" href="https://www.learn.ed.ac.uk/webapps/blackboard/execute/announcement?method=search&context=course_entry&course_id=_77718_1&handle=announcements_entry&mode=view">
         <span><i class="fas fa-exclamation" style="font-size: 25px;"></i><br>Announcements</span>
