--- a/template_learn/template_learndashweek.html
+++ b/template_learn/template_learndashweek.html
@@ -16,7 +16,7 @@
             </div>
     </div>
     <a class="Weekly" href="https://www.learn.ed.ac.uk/webapps/blackboard/content/listContentEditable.jsp?content_id=_4661838_1&course_id=_77718_1&mode=reset">
-        <span><i class="fas fa-chalkboard-teacher" style="font-size: 25px;"></i><br>Weekly Materials</span>
+        <span><i class="fas fa-chalkboard-teacher" style="font-size: 25px;"></i><br>Weekly activities and materials</span>
     </a>
     <a class="Announcements" href="https://www.learn.ed.ac.uk/webapps/blackboard/execute/announcement?method=search&context=course_entry&course_id=_77718_1&handle=announcements_entry&mode=view">
         <span><i class="fas fa-exclamation" style="font-size: 25px;"></i><br>Announcements</span>
