--- a/template_learn/template_week.html
+++ b/template_learn/template_week.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://josiahpjking.github.io/template_learn/ordlist.css"/>
+<link rel="stylesheet" href="ordlist.css"/>
 <ol class="rounded-list">
 <li>Watch the lecture: [link to lecture recording]</li>
 
