--- a/template_learn/template_learndashweeklo.html
+++ b/template_learn/template_learndashweeklo.html
@@ -27,6 +27,9 @@
     <a class="Assessment" href="https://www.learn.ed.ac.uk/webapps/blackboard/content/listContent.jsp?course_id=_77718_1&content_id=_4657491_1&mode=reset">
         <span><i class="fas fa-align-left" style="font-size: 25px;"></i><br>Assessment/Report</span>
     </a>
+    <a class="FAQ">
+        <span><i class="fas fa-question" style="font-size: 25px;"></i><br>FAQs</span>
+    </a>
     <a class="Timetabling">
         <span><i class="far fa-clock" style="font-size: 25px;"></i><br>Timetabling
     </a>
