--- a/template_learn/template_learndashweek.html
+++ b/template_learn/template_learndashweek.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://josiahpjking.github.io/template_learn/template_learn2.css"/>
+<link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//template_learn2.css"/>
 <link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//fontawesome-all.min.css"/>
 <div class="grid-container">
     <div class="Contacts">
@@ -27,7 +27,7 @@
     <a class="Assessment" href="https://www.learn.ed.ac.uk/webapps/blackboard/content/listContent.jsp?course_id=_77718_1&content_id=_4657491_1&mode=reset">
         <span><i class="fas fa-align-left" style="font-size: 25px;"></i><br>Assessment/Report</span>
     </a>
-    <a class="FAQ">
+    <a class="FAQ" href ="https://www.learn.ed.ac.uk/webapps/blackboard/content/listContentEditable.jsp?content_id=_4666182_1&course_id=_77718_1&mode=reset">
         <span><i class="fas fa-question" style="font-size: 25px;"></i><br>FAQs</span>
     </a>
     <a class="Timetabling">
