--- a/template_learn/template_week2.html
+++ b/template_learn/template_week2.html
@@ -1,5 +1,5 @@
-<!--<p><link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//ordlist.css" /></p>-->
 <p><link rel="stylesheet" href="ordlist.css" /></p>
+<p><link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//ordlist.css" /></p>
 <ol class="rounded-list">
 
 
@@ -14,10 +14,8 @@
 
 <li>Watch the lectures</li>
 <ol>
-<li><a>Lecture A</a></li>
-<li><a>Mini quiz A</a></li>
-<li><a>Lecture B</a></li>
-<li><a>Mini quiz B</a></li>
+<li>Watch <a>Lecture A</a> then complete <a>Mini quiz A</a></li>
+<li>Watch <a>Lecture A</a> then complete <a>Mini quiz A</a></li>
 </ol>
 
 <li><a href="https://uoepsy.github.io/dapr1/labs/chap-data-types.html#reading" target="_blank" rel="noreferrer noopener">Complete the reading</a></li>
@@ -26,12 +24,9 @@
 
 <li>If you have any problems, you can get one-to-one or small-group help here:</li>
 <ol>
-<li><a>Exercises 1 - 4: Day Time </a></li>
-<li><a>Exercises 1 - 4: Day Time </a></li>
-<li><a>Exercises 5 - 8:  Day Time </a></li>
-<li><a>Exercises 5 - 8: Day Time </a></li>
-<li><a>Exercises 9 - 12: Day Time </a></li>
-<li><a>Exercises 9 - 12: Day Time </a></li>
+<li>Exercises 1 - 4: <a>Day Time </a> or <a>Day Time </a></li>
+<li>Exercises 5 - 8: Day Time <a>Day Time </a> or <a>Day Time </a></li>
+<li>Exercises 9 - 12: Day Time <a>Day Time </a> or <a>Day Time </a></li>
 </ol>
 
 <li>Or you can post your questions on the<a href="https://www.learn.ed.ac.uk/webapps/discussionboard/do/forum?action=list_threads&amp;course_id=_77718_1&amp;nav=discussion_board_entry&amp;conf_id=_344461_1&amp;forum_id=_380249_1">discussion forum</a></li>
