--- a/template_learn/template_week2.html
+++ b/template_learn/template_week2.html
@@ -1,5 +1,5 @@
 <p><link rel="stylesheet" href="ordlist.css" /></p>
-<p><link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//ordlist.css" /></p>
+<!--<p><link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//ordlist.css" /></p>-->
 <ol class="rounded-list">
 
 
