--- a/template_learn/template_week2.html
+++ b/template_learn/template_week2.html
@@ -1,19 +1,19 @@
 <p><link rel="stylesheet" href="ordlist.css" /></p>
-<!--<p><link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//ordlist.css" /></p>-->
+<p><link rel="stylesheet" href="https://josiahpjking.github.io/template_learn//ordlist.css" /></p>
 <ol class="rounded-list">
 
 
 <li><a href="https://www.learn.ed.ac.uk/webapps/assessment/take/launchAssessment.jsp?course_id=_77718_1&amp;content_id=_4661411_1&amp;mode=cpview">Complete the quiz!</a></li>
 
 <li>Attend a quiz feedback session, where tutors will talk through the questions</li>
-<ol>
+<ol class="rounded-list">
 <li><a>Session 1 - Day Time </a></li>
 <li><a>Session 2 - Day Time </a></li>
 </ol>
 
 
 <li>Watch the lectures</li>
-<ol>
+<ol class="rounded-list">
 <li>Watch <a>Lecture A</a> then complete <a>Mini quiz A</a></li>
 <li>Watch <a>Lecture A</a> then complete <a>Mini quiz A</a></li>
 </ol>
@@ -23,7 +23,7 @@
 <li><a href="https://uoepsy.github.io/dapr1/labs/chap-data-types.html#exercises" target="_blank" rel="noreferrer noopener">Complete the exercises</a></li>
 
 <li>If you have any problems, you can get one-to-one or small-group help here:</li>
-<ol>
+<ol class="rounded-list">
 <li>Exercises 1 - 4: <a>Day Time </a> or <a>Day Time </a></li>
 <li>Exercises 5 - 8: Day Time <a>Day Time </a> or <a>Day Time </a></li>
 <li>Exercises 9 - 12: Day Time <a>Day Time </a> or <a>Day Time </a></li>
