--- a/template_learn/template_week2.html
+++ b/template_learn/template_week2.html
@@ -7,15 +7,14 @@
 
 <li>Attend a quiz feedback session, where tutors will talk through the questions</li>
 <ol class="rounded-list">
-<li><a>Session 1 - Day Time </a></li>
-<li><a>Session 2 - Day Time </a></li>
+<li><a>Session 1 - Day Time </a>, or <a>Session 2 - Day Time </a></li>
 </ol>
 
 
 <li>Watch the lectures</li>
 <ol class="rounded-list">
 <li>Watch <a>Lecture A</a> then complete <a>Mini quiz A</a></li>
-<li>Watch <a>Lecture A</a> then complete <a>Mini quiz A</a></li>
+<li>Watch <a>Lecture B</a> then complete <a>Mini quiz B</a></li>
 </ol>
 
 <li><a href="https://uoepsy.github.io/dapr1/labs/chap-data-types.html#reading" target="_blank" rel="noreferrer noopener">Complete the reading</a></li>
