--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
     <h1>Biography</h1>
 
     <p>I am currently working as a senior teaching coordinator in statistics in the Department of Psychology at the University of Edinburgh. I coordinate the teaching of undergraduate and postgraduate courses in statistics &amp; quantitative methods using R.</p>
-<p>I have previously worked for the <!-- raw HTML omitted -->Scottish Centre for Administrative Data Research (SCADR)<!-- raw HTML omitted -->, and Scottish Government. I completed my PhD in Psychology at the University of Edinburgh, studying nonverbal behaviour in relation to deception and cognitive load. I was supervised by (and I&rsquo;m still doing work with) <!-- raw HTML omitted -->Martin Corley<!-- raw HTML omitted --> and <!-- raw HTML omitted -->Hannah Rohde<!-- raw HTML omitted -->, and I did a lot of work with <!-- raw HTML omitted -->Jia Loy<!-- raw HTML omitted --> too.</p>
+<p>I have previously worked for the <a href="https://www.scadr.ac.uk">Scottish Centre for Administrative Data Research (SCADR)</a>, and Scottish Government. I completed my PhD in Psychology at the University of Edinburgh, studying nonverbal behaviour in relation to deception and cognitive load. I was supervised by (and I&rsquo;m still doing work with) <a href="http://homepages.ed.ac.uk/martinc/">Martin Corley</a> and <a href="http://www.lel.ed.ac.uk/~hrohde/">Hannah Rohde</a>, and I did a lot of work with <a href="https://jialoy.github.io/">Jia Loy</a> too.</p>
 
 
     <div class="row">
