--- a/publication/contextual-effects-on-online-pragmatic-inferences-to-deception/index.html
+++ b/publication/contextual-effects-on-online-pragmatic-inferences-to-deception/index.html
@@ -514,7 +514,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Discourse Processes, 55:2, 123-135, <a href="https://doi.org/10.1080/0163853X.2017.1330041">https://doi.org/10.1080/0163853X.2017.1330041</a></div>
+          <div class="col-12 col-md-9">Discourse Processes, 55:2, 123-135, <a href="https://doi.org/10.1080/0163853X.2017.1330041" target="_blank">https://doi.org/10.1080/0163853X.2017.1330041</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
