--- a/publication/dasguptr/index.html
+++ b/publication/dasguptr/index.html
@@ -518,7 +518,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><a href="https://github.com/josiahpjking/DasGuptR">https://github.com/josiahpjking/DasGuptR</a></div>
+          <div class="col-12 col-md-9"><a href="https://github.com/josiahpjking/DasGuptR" target="_blank">https://github.com/josiahpjking/DasGuptR</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
