--- a/publication/interpreting-nonverbal-cues-to-deception-in-real-time/index.html
+++ b/publication/interpreting-nonverbal-cues-to-deception-in-real-time/index.html
@@ -514,7 +514,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">PLoS ONE 15(3): e0229486. <a href="https://doi.org/10.1371/journal.pone.0229486">https://doi.org/10.1371/journal.pone.0229486</a></div>
+          <div class="col-12 col-md-9">PLoS ONE 15(3): e0229486. <a href="https://doi.org/10.1371/journal.pone.0229486" target="_blank">https://doi.org/10.1371/journal.pone.0229486</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
