--- a/publication/reconvictions-blog/index.html
+++ b/publication/reconvictions-blog/index.html
@@ -477,7 +477,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">https://t.co/U7rsHnNgFh?amp=1</div>
+          <div class="col-12 col-md-9"><a href="https://t.co/U7rsHnNgFh?amp=1" target="_blank">https://t.co/U7rsHnNgFh?amp=1</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
