--- a/publication/scottish-crime-justice-survey-shiny/index.html
+++ b/publication/scottish-crime-justice-survey-shiny/index.html
@@ -477,7 +477,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><a href="https://scotland.shinyapps.io/sg-scottish-crime-justice-survey">https://scotland.shinyapps.io/sg-scottish-crime-justice-survey</a></div>
+          <div class="col-12 col-md-9"><a href="https://scotland.shinyapps.io/sg-scottish-crime-justice-survey" target="_blank">https://scotland.shinyapps.io/sg-scottish-crime-justice-survey</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
